Minor fix in navigation (running on mobile)

--- a/css/main.css
+++ b/css/main.css
@@ -163,14 +163,11 @@ pre > code {
   float: right;
   line-height: 54px;
 }
-.site-nav .nav-trigger {
-  display: none;
-}
 .site-nav .menu-icon {
   display: none;
 }
 .site-nav .page-link {
-  color: #ccc;
+  color: #ddd;
   line-height: 1.5;
 }
 .site-nav .page-link:not(:last-child) {
@@ -179,14 +176,15 @@ pre > code {
 @media screen and (max-width:600px) {
   .site-nav {
     position: absolute;
-    top: 9px;
-    right: 15px;
-    background-color: #fdfdfd;
+    top: 8px;
+    right: 8px;
+    background-color: #eeeeee;
     border: 1px solid #e8e8e8;
-    border-radius: 5px;
+    border-radius: 3px;
+    color: #0067a7;
     text-align: right;
   }
-  .site-nav label[for="nav-trigger"] {
+  .site-nav label[for="trigger"] {
     display: block;
     float: right;
     width: 36px;
@@ -204,8 +202,21 @@ pre > code {
     text-align: center;
   }
   .site-nav .menu-icon > svg path {
-    fill: #424242;
+    fill: #007256;
   }
+
+  .site-nav .trigger {
+    clear: both;
+    margin-bottom: 5px;
+    display: none;
+  }
+  .site-nav:hover .trigger { 
+    display: block; 
+  }
+  .site-nav:hover a {
+    color: #0067a7;
+  }
+
   .site-nav input ~ .trigger {
     clear: both;
     display: none;
